rev_16-Oct_19-12_33

19 Oct
manually merged with ckgedit farms branch