@@ -46,6 +46,14 @@ class helper_plugin_ckgedit extends DokuWiki_Plugin {
       return false;
   }
   
+  function has_plugin($plugin) {    
+   static $plugins_list;
+      if(!$plugins_list) {         
+           $plugins_list = plugin_list('syntax');               
+      }
+      return in_array($plugin, $plugins_list);
+  }
+  
   function registerOnLoad($js){
   global $ID;
   global $lang;
@@ -463,6 +471,10 @@ function FCKeditor_OnComplete( editorInstance )
         window.dwfckTextChanged = true;
   });
 
+  editorInstance.on("focus", function(e) {
+          window.dwfckTextChanged = true;
+    });
+    
   oDokuWiki_FCKEditorInstance.dwiki_user = "$user_type";   
   oDokuWiki_FCKEditorInstance.dwiki_client = "$client";    
   oDokuWiki_FCKEditorInstance.dwiki_usergroups = "$user_groups";  
