@@ -26,7 +26,7 @@ $lang['complex_tables'] ="Use the complex tables algorithm.  As opposed to the s
 $lang['duplicate_notes'] = "Set this to true if users create multiple footnotes with the same footnote texts; required to prevent notes from being corrupted.";
 $lang['winstyle'] = 'Use direct path to media directory instead of fckeditor/userfiles. This function copies <br />fckeditor/userfiles/.htaccess.security to data/media/.htaccess; if not, this should be done manually';
 $lang['other_lang'] = 'Your default language for the CKEditor is the language set for your browser.   You can, however, choose another language here; it is independent of the Dokuwiki interface language.';
-$lang['dw_priority'] = "<b>dw_priority</b>: Make Dokuwiki editor the default editor"; 
+$lang['dw_priority'] = "Make Dokuwiki editor the default editor: does not work in farms"; 
 $lang['preload_ckeditorjs'] = "Preload the ckeditor's javascript to speed up subsequent loading of editor";
 $lang['nofont_styling']  = 'Display font styles in editor as plugin markup. See the ckgedit plugin page at Dokuwiki.org for details.';
 $lang['font_options']  = 'Remove font options.';
